[package]
name = "warp_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blstrs = "0.7"
rand = "0.8"
group = "0.13"
subtle = "2.4"

# WASM
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dependencies.getrandom]
version = "0.2"
features = ["js"]
