[package]
name = "warp_core"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blstrs = "0.7"
group = "0.13"
subtle = "2.4"

# WASM
wasm-bindgen = "0.2"

# RNG + JS Interop
web-sys = { version = "0.3", features = ["Window", "Crypto"] }
js-sys = "0.3"

# ZK-HACK BLS-PEDERSEN
bls-pedersen = { path = "./zk-hack-bls-pedersen" }

[dependencies.getrandom]
version = "0.2"
features = ["js"]
