[package]
name = "warp_core"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# BLS
blstrs = "0.7"
group = "0.13"
subtle = "2.4"
ark-serialize = "0.4"
ark-ec = "0.4"

# Hashing
sha2 = "0.10"                     
blake2 = "=0.9.2"
digest = "=0.9.0"
generic-array = "=0.14.9"
blake2s_simd = "0.5"

# WASM
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Crypto"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

# Force older deps
pest = "=2.7.3"
